--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,15 +1,22 @@
-.popup__text {
+.popup__input {
+    max-width: 358px;
+    padding: 0 36px 13px 36px;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2); 
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-size: 14px;
     font-weight: 400;
     line-height: 1;
-    margin: 0;
-    padding: 0 36px 13px 36px;
+}
+
+.popup__input:focus {
+    border: 1px solid blue;
 }
 
 @media screen and (min-width: 320px) and (max-width: 550px) {
-    .popup__text {
+    .popup__input {
+        max-width: 238px;
         padding-inline: 22px;
     }
 }
