--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,4 +5,10 @@
     font-family: 'Inter', 'Arial', sans-serif;
     text-rendering: optimizeLegibility;
     box-sizing: border-box;
+    min-height: 100vh;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
 }
