--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -13,5 +13,6 @@
 @media screen and (min-width: 320px) and (max-width: 550px) {
     .popup__container {
         max-width: 282px;
+        top: -20px;
     }
 }
