--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,6 +4,7 @@
     align-self: center;
     margin-left: auto;
     border: solid 2px white;
+    border-radius: 2px;
     background-color: transparent;
     cursor: pointer;
 }
