--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -2,6 +2,7 @@
     background-image: url(../../../images/heart.svg);
     background-size: contain;
     background-repeat: no-repeat;
+    background-color: transparent;
     width: 22px;
     height: 19px;
     margin: 0;
