--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -6,5 +6,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     background-color: white;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 }
