--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,11 +11,13 @@
 
 @media screen and (min-width: 340px) and (max-width: 645px) {
     .footer__copyright {
+        font-size: 14px;
         padding-left: 13%;
     }
 }
 @media screen and (min-width: 320px) and (max-width: 340px) {
     .footer__copyright {
+        font-size: 14px;
         padding-left: 0;
     }
 }
