--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,9 +1,10 @@
 .popup__form {
     max-width: 358px;
     width: 100%;
+    max-height: 330px;
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
+    row-gap: 28px;
     align-self: center;
     margin: 0;
     margin-bottom: 30px;
@@ -12,5 +13,6 @@
 @media screen and (min-width: 320px) and (max-width: 550px) {
     .popup__form {
         max-width: 238px;
+        row-gap: 29px;
     }
 }
