--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,7 @@
 .popup__input {
-    max-width: 358px;
-    padding: 0 36px 13px 36px;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 10px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     font-family: 'Inter', 'Arial', sans-serif;
@@ -12,11 +13,4 @@
 
 .popup__input:focus {
     border: 1px solid blue;
-}
-
-@media screen and (min-width: 320px) and (max-width: 550px) {
-    .popup__input {
-        max-width: 238px;
-        padding-inline: 22px;
-    }
 }
