--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -9,7 +9,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
     .profile__avatar {
-        margin: 0;
+        margin-right: 0;
         margin-bottom: 22.25px;
+        max-width: 157.75px;
+        max-height: 119.5px;
     }
 }
