--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,13 +1,21 @@
 .profile__edit-button {
     width: 24px;
     height: 24px;
-    background-image: url(../../../images/edit_button.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-color: transparent;
     cursor: pointer;
+    border: 1px solid white;
+    margin: 0;
+    padding: 0;
 }
 
 .profile__edit-button:hover {
     opacity: 0.6;
     transition: 0.3s;
+}
+
+@media screen and (min-width: 320px) and (max-width: 670px) {
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+    }
 }
