--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,11 +1,14 @@
 .profile__name {
     font-family: 'Inter', 'Arial', sans-serif;
-    font-style: normal;
+    font-style: medium;
     font-size: 42px;
     font-weight: 500;
     line-height: 1.14;
     text-align: left;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
