--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,8 @@
 
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 
+@import url(../blocks/profile/__edit-logo/profile__edit-logo.css);
+
 @import url(../blocks/profile/__text/profile__text.css);
 
 @import url(../blocks/profile/__add-button/profile__add-button.css);
