--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -9,9 +9,12 @@
     font-size: 18px;
     line-height: 1;
     text-align: center;
-    border-radius: 2px;
     margin: 18px 36px 37px 36px;
     cursor: pointer;
+    border: 0;
+    outline: none;
+    border-radius: 2px;
+    padding: 0;
 }
 
 .popup__button-submit:hover {
