--- a/blocks/popup/__header/popup__header.css
+++ b/blocks/popup/__header/popup__header.css
@@ -4,13 +4,13 @@
     font-size: 24px;
     font-weight: 900;
     line-height: 1;
-    margin: 0;
-    padding: 34px 64px 54px 36px;
+    margin: 37px 64px 51px 36px;
+    padding: 0;
 }
 
 @media screen and (min-width: 320px) and (max-width: 550px) {
     .popup__header {
         font-size: 18px;
-        padding: 25px 22px 75px 22px;
+        margin: 25px 22px 75px 22px;
     }
 }
