--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,7 @@
 .profile__avatar {
     object-fit: cover;
-    max-width: 168.75px;
-    max-height: 127.5px;
+    max-width: 120зx;
+    max-height: 120px;
     border-radius: 50%;
     margin: 0;
     margin-right: 30px;
@@ -11,7 +11,5 @@
     .profile__avatar {
         margin-right: 0;
         margin-bottom: 22.25px;
-        max-width: 157.75px;
-        max-height: 119.5px;
     }
 }
