--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {
     margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    row-gap: 16px;
+    row-gap: 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
