--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,13 +1,16 @@
 .profile__name {
+    max-width: 500px;
     font-family: 'Inter', 'Arial', sans-serif;
-    font-style: medium;
+    font-style: normal;
     font-size: 42px;
     font-weight: 500;
     line-height: 1.14;
     text-align: left;
     margin: 0;
     text-overflow: ellipsis;
+    /* Текст обрезается и к конце строки добавляется многоточие */
     white-space: nowrap;
+    /* Запретила перенос текста */
     overflow: hidden;
 }
 
