--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,6 @@
 .profile__avatar {
     object-fit: cover;
-    max-width: 120зx;
+    max-width: 120px;
     max-height: 120px;
     border-radius: 50%;
     margin: 0;
