--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -9,6 +9,7 @@
 @media screen and (min-width: 320px) and (max-width: 670px) {
     .profile__container {
         column-gap: 10px;
-        transform: translateX(15px) translateY(4px);
+        
+        transform: translateX(13px);
     }
 }
