--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -5,9 +5,7 @@
     background-color: transparent;
     width: 22px;
     height: 19px;
-    margin: 0;
-    margin-right: 30px;
-    margin-left: auto;
+    margin: 0 20px 3px auto;
     align-self: center;
     border: none;
     cursor: pointer;
