--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -25,8 +25,8 @@
 @media screen and (min-width: 320px) and (max-width: 550px) {
     .popup__button-submit {
         max-width: 238px;
-        height: 46px;
-        margin: 15px 22px 25px 22px;
+        min-height: 46px;
+        margin: 14px 22px 25px 22px;
         font-size: 14px;
     }
 }
