--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -9,7 +9,6 @@
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
     .profile__avatar {
-        margin-right: 0;
-        margin-bottom: 26px;
+        margin: 0 0 28px 1px;
     }
 }
