--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -8,8 +8,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
     .profile__container {
-        column-gap: 10px;
-        
-        transform: translateX(13px);
+        margin: 0;
+        display: block;
+        position: relative;
+        max-width: 250px;
     }
 }
