--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -6,6 +6,10 @@
     border: 1px solid white;
     margin: 0;
     margin-top: 4px;
+    margin-left: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
 }
 
@@ -18,5 +22,10 @@
     .profile__edit-button {
         width: 18px;
         height: 18px;
+        position: absolute;
+        right: -28px;
+        top: 0;
+        bottom: 0;
+        margin: auto 0;
     }
 }
