--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -14,6 +14,12 @@
     overflow: hidden;
 }
 
+@media screen and (min-width: 670px) and (max-width: 840px) {
+    .profile__text {
+        max-width: 300px;
+    }
+}
+
 @media screen and (min-width: 320px) and (max-width: 670px) {
     .profile__text {
         font-size: 14px;
