--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,6 +8,8 @@
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
