--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,7 +6,7 @@
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
