--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -5,10 +5,10 @@
     background-color: transparent;
     width: 22px;
     height: 19px;
-    margin: 0 20px 3px auto;
     align-self: center;
     border: none;
     cursor: pointer;
+    float: right;
 }
 
 .element__button-like:hover {
