--- a/blocks/element/__picture/element__picture.css
+++ b/blocks/element/__picture/element__picture.css
@@ -2,6 +2,8 @@
     margin: 0;
     object-fit: cover;
     max-width: 282px;
+    width: 100%;
     max-height: 282px;
+    height: 100%;
     border-radius: 10px 10px 0px 0px;
 }
