--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -5,7 +5,7 @@
     font-weight: 900;
     line-height: 1;
     text-align: left;
-    margin: 27px 0 31px 21px;
+    margin: 0;
     color: black;
     text-overflow: ellipsis;
     white-space: nowrap;
