--- a/pages/index.css
+++ b/pages/index.css
@@ -32,11 +32,15 @@
 
 @import url(../blocks/element/element.css);
 
+@import url(../blocks/element/__container/element__container.css);
+
 @import url(../blocks/element/__picture/element__picture.css);
 
 @import url(../blocks/element/__text/element__text.css);
 
 @import url(../blocks/element/__button-like/element__button-like.css);
+
+@import url(../blocks/element/__button-delete/element__button-delete.css);
 
 @import url(../blocks/element/__button-like/_type/element__button-like_type_active.css);
 
@@ -59,3 +63,37 @@
 @import url(../blocks/popup/__button-submit/popup__button-submit.css);
 
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/_places/popup_places.css);
+
+@import url(../blocks/popup/__image-container/popup__image-container.css);
+
+@import url(../blocks/popup/__picture/popup__picture.css);
+
+@import url(../blocks/popup/__image-caption/popup__image-caption.css);
+
+@import url(../blocks/popup/_new-place/popup_new-place.css);
+
+@import url(../blocks/popup/__place-container/popup__place-container.css);
+
+@import url(../blocks/popup/__button-save/popup__button-save.css);
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
+
+@import url();
