--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -21,3 +21,12 @@
     opacity: 0.8;
     transition: 0.3s;
 }
+
+@media screen and (min-width: 320px) and (max-width: 550px) {
+    .popup__button-save {
+        max-width: 238px;
+        min-height: 46px;
+        margin: 15px 22px 25px 22px;
+        font-size: 14px;
+    }
+}
