--- a/blocks/popup/__place-container/popup__place-container.css
+++ b/blocks/popup/__place-container/popup__place-container.css
@@ -9,3 +9,9 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     position: relative;
 }
+
+@media screen and (min-width: 320px) and (max-width: 550px) {
+    .popup__place-container {
+        max-width: 282px;
+    }
+}
