--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,19 +1,17 @@
 .elements {
-    max-width: 886px;
     min-height: 744px;
-    margin: 0 auto;
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     grid-auto-rows: auto;
     gap: 17px 12px;
     justify-items: center;
+    min-height: 50vh;
 }
 
 @media screen and (min-width: 320px) and (max-width: 645px) {
     .elements {
         margin-top: 36px;
-        max-width: 282px;
         min-height: 2268px;
         row-gap: 20px;
     }
