--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__button-submit {
+.popup__button {
     max-width: 358px;
     min-height: 50px;
     background-color: black;
@@ -17,13 +17,13 @@
     padding: 0;
 }
 
-.popup__button-submit:hover {
+.popup__button:hover {
     opacity: 0.8;
     transition: 0.3s;
 }
 
 @media screen and (min-width: 320px) and (max-width: 550px) {
-    .popup__button-submit {
+    .popup__button {
         max-width: 238px;
         min-height: 46px;
         margin: 14px 22px 25px 22px;
