--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,8 +9,12 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 1;
+    width: 100%;
+    /* box-sizing: border-box; */
+    outline: none;
+    /* box-shadow: none; */
 }
 
-.popup__input:focus {
-    border: 1px solid blue;
-}
+/* .popup__input:focus {
+    outline: none;
+} */
