--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
+    padding: 0;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
