--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,11 @@
 .profile__avatar {
-    object-fit: cover;
+    box-sizing: border-box;
     max-width: 120px;
     max-height: 120px;
-    border-radius: 50%;
     margin: 0;
     margin-right: 30px;
+    padding: 0;
+    position: relative;
 }
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
