--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    /* position: relative; */
 }
 
 @media screen and (min-width: 320px) and (max-width: 670px) {
